v3.10.0 (XXXX-XX-XX)
--------------------
* Disable optimization rule to avoid crash (BTS-951).

* Updated Views UI with all changes necessary for the 3.10.0 launch.

* Fixed SEARCH-343 Fixed iterating all documents with nested fields

* Fixed SEARCH-322 Fixed executing empty nested condition

* Updated arangosync to v2.12.0-preview-11.

* Fixed SEARCH-369: add a compatibility check to the search-alias view for
  indexes from the same collection.

* Fixed BTS-959: no one call shutdown and delete datastore for the inverted
  index in some C++ tests.

* Fix SEARCH-350: Crash during consolidation.

* When using `SHORTEST_PATH`, `K_SHORTEST_PATHS`, `ALL_SHORTEST_PATHS`, or
  `K_PATHS` in an AQL Query and the query itself produced warnings during
  execution, the type has been wrongly reported. It reported always with
  `SHORTEST_PATH` and not the specific used one.
* Fixed SEARCH-368 Fixed handling of array comparison for inverted index.

* SEARCH-357: Added SUBSTRING_BYTES function.

* Fixed SEARCH-347 Cycle variable reference in nested search query is properly
  detected and rejected.
  
* Fixed SEARCH-364 Fixed index fields match check for inverted index.

* Web UI: Reduce size and initial render height of a modal (fixes BTS-940).

* Fix comparison of JSON schemas on DB servers after there was a schema change
  via a coordinator: the schema comparison previously did not take into account
  that some ArangoDB versions store an internal `{"type":"json"}` attribute in
  the schema, and some don't. Thus two identical schemas could compare
  differently.
  The correct schema version was always applied and used, and validation of
  documents against the schema was also not affected. However, because two
  schemas could compare unequal, this could have caused unnecessary repeated
  work for background maintenance threads.

* Removed transitive node dependencies is-wsl and media-typer.

* Web UI: Now correctly handles the server error response when an error occurred